--- a/web/index.html
+++ b/web/index.html
@@ -13,23 +13,74 @@
 
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
+    <base href="$FLUTTER_BASE_HREF">
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- Sign-in elements -->
+  <meta name="google-signin-client_id" content="119476151911-k9gq4uapklc03mpeevh7vfdo0vrjskjt.apps.googleusercontent.com">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="meetmeyou_app">
+  <meta name="apple-mobile-web-app-title" content="meetmeyou">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>meetmeyou_app</title>
+
+
+  <title>meetmeyou</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+
+  <script>
+    // Facebook Sign-in Config
+    var FACEBOOK_APP_ID = "1321275768236042";
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: FACEBOOK_APP_ID,
+        cookie: true,
+        xfbml: true,
+        version: "v9.0",
+      });
+      FB.AppEvents.logPageView();
+    };
+  </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
+  <script src="flutter_facebook_auth.js" type="application/javascript" ></script>
+
+
+
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDvzw0R7LFzNBIICzpiNadfxNveFtvOT5E",
+    authDomain: "meetmeyou-9fd90.firebaseapp.com",
+    projectId: "meetmeyou-9fd90",
+    storageBucket: "meetmeyou-9fd90.appspot.com",
+    messagingSenderId: "119476151911",
+    appId: "1:119476151911:web:b7ed0fe79c87a4df7656c2",
+    measurementId: "G-QL48PVQ1CZ"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+  </script>
+
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -97,5 +148,9 @@
       loadMainDartJs();
     }
   </script>
+
+
+
+
 </body>
 </html>
